Fix Safari flex collapsing bug

--- a/assets/scss/_cards.scss
+++ b/assets/scss/_cards.scss
@@ -72,6 +72,7 @@
 		align-items: center;
 		color: lighten( $dark, 30% );
 		display: flex;
+		flex-shrink: 0;
 		font-size: 0.9rem;
 		justify-content: space-between;
 		padding: 0.75rem;
